# agent-rebuild-workspace

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  router.py  state.py
backend/app/agent/nodes/: __init__.py  final_answer.py  guardrails.py  planner.py  tool_selection.py
backend/app/core/: config.py
backend/app/llm/: __init__.py  base.py  fake_llm.py
backend/app/tools/: __init__.py  policy_tool.py  product_tool.py  schemas.py
backend/evals/: README.md
backend/evals/datasets/: agent_cases.jsonl  router_cases.jsonl
backend/tests/: test_agent_flow.py  test_api.py  test_config.py  test_router.py  test_tools.py
docs/: 01-整体架构设计.md  02-MVP实现计划.md  03-面试讲法.md  04-测试与评测设计.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/src/components/: AgentPanel.vue  ChatMessage.vue  ConversationSidebar.vue
frontend/src/services/: api.ts
frontend/src/types/: agent.ts
